--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,106 @@
+* {
+  margin: 0;
+}
+
+body {
+  font-family: 'Bebas Neue', cursive;
+  background-color: rgb(48, 47, 47);
+}
+
 .App {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.main-header {
+  width: 100%;
+  height: 15vh;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color:#537BC8;
+  color: white;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.header-title {
+  margin: 0 auto;
+  font-size: 48px;
+}
+
+.Form {
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+input {
+  border-radius: 4px;
+  margin: 0 10px;
+  padding: 0 2px;
+  font-family: 'Bebas Neue', cursive;
+  font-size: 21px;
+}
+
+.btn-add {
+  border-radius: 5px;
+  background-color: rgb(28, 184, 65);
   color: white;
+  border: 2px solid white;
+  line-height: 35px;
+  font-family: 'Bebas Neue', cursive;
+  font-size: 25px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-add:hover {
+  border: 2px solid rgb(28, 184, 65);
+  background-color: rgb(20, 206, 63);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.List {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  text-align: center;
+  width: 70vw;
+}
+
+.List-Item {
+  padding: 15px;
+  color: rgb(26, 26, 26);
+}
+
+.Full-List-Item {
+  border: 2px solid rgba(255, 255, 255, 0.788);
+  padding: 10px;
+  border-radius: 1px;
+  background-color: rgba(255, 255, 255, 0.856);
+}
+
+.delete-btn {
+  background-color: red;
+  color: rgba(255, 255, 255, 0.774);
+  border: 2px solid rgb(255, 0, 0);
+  line-height: 28px;
+  font-size: 20px;
+  border-radius: 5px;
+}
+
+.delete-btn:hover {
+  border: 2px solid red;
+  background-color: rgb(238, 55, 55);
+}
+
+.details-container {
+  width: 50vw;
+  height: 150px;
+}
+
+.list-details {
+  padding: 10px;
+  font-size: 23px;
 }
