--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 body {
   font-family: 'Bebas Neue', cursive;
-  background-color: rgb(48, 47, 47);
+  background-color: rgb(255, 255, 255);
 }
 
 .App {
@@ -14,9 +14,10 @@ body {
 
 .main-header {
   width: 100%;
-  height: 15vh;
+  height: 30vh;
   text-align: center;
   background-color:#537BC8;
+  background-image: url('https://2.bp.blogspot.com/-KiSr31IKAHQ/VAt6Imxyb-I/AAAAAAAACwQ/puQ3k6-Ncgw/s1600/IMGP5125.JPG');
   color: white;
   display: flex;
   justify-content: center;
@@ -25,15 +26,20 @@ body {
 
 .header-title {
   margin: 0 auto;
-  font-size: 48px;
+  font-size: 58px;
 }
 
 .Form {
-  padding: 20px;
+  padding: 30px;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  background-color: rgba(83, 124, 200, 0.918);
+  margin: 25px auto;
+  border: 2px solid rgba(255, 255, 255, 0.822);
+  width: 80%;
+  border-radius: 6px;
 }
 
 input {
@@ -66,19 +72,21 @@ input {
   align-items: center;
   margin: 0 auto;
   text-align: center;
-  width: 70vw;
+  width: 80vw;
 }
 
 .List-Item {
   padding: 15px;
   color: rgb(26, 26, 26);
+  width: 80vw;
 }
 
 .Full-List-Item {
-  border: 2px solid rgba(255, 255, 255, 0.788);
-  padding: 10px;
-  border-radius: 1px;
-  background-color: rgba(255, 255, 255, 0.856);
+  border: 5px solid rgba(255, 255, 255, 0.849);
+  padding: 20px;
+  border-radius: 10px;
+  background-color: rgba(204, 204, 204, 0.541);
+  width: 80vw;
 }
 
 .delete-btn {
@@ -96,11 +104,23 @@ input {
 }
 
 .details-container {
-  width: 50vw;
+  width: 60vw;
   height: 150px;
+  margin: 0 auto;
 }
 
 .list-details {
   padding: 10px;
   font-size: 23px;
+}
+
+.edit-btn {
+  border: 2px solid rgb(70, 70, 70);
+  font-size: 20px;
+  border-radius: 5px;
+  line-height: 28px;
+}
+
+.edit-btn:hover {
+  border: 2px solid black;
 }
